--- a/index.html
+++ b/index.html
@@ -15,22 +15,62 @@
   </head>
  <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-      <a class="navbar-brand" href="#">Top navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Expand at sm</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
+
+      <div class="collapse navbar-collapse" id="navbarsExample03">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Worship</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Sunday worship</a>
+              <a class="dropdown-item" href="#">Daily worship</a>
+              <a class="dropdown-item" href="#">Children's church</a>
+              <a class="dropdown-item" href="#">Messy church</a>
+              <a class="dropdown-item" href="#">Online and apps</a>
+            </div>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown02">
+              <a class="dropdown-item" href="#">Choir and junior choir</a>
+              <a class="dropdown-item" href="#">Pastoral care</a>
+              <a class="dropdown-item" href="#">Craft group</a>
+              <a class="dropdown-item" href="#">Fundraising</a>
+            </div>
+          </li>          
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About us</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown03">
+              <a class="dropdown-item" href="#">St. Helen's Church</a>
+              <a class="dropdown-item" href="#">Photographs</a>
+              <a class="dropdown-item" href="#">Video tour</a>
+              <a class="dropdown-item" href="#">Stained glass windows</a>
+              <a class="dropdown-item" href="#">Church organ</a>
+              <a class="dropdown-item" href="#">Church clock</a>
+              <a class="dropdown-item" href="#">Church tower</a>
+              <a class="dropdown-item" href="#">Welton knight</a>
+              <a class="dropdown-item" href="#">Visit us</a>
+              <a class="dropdown-item" href="#">Contact us</a>
+            </div>
+          </li>            
+
+          <li class="nav-item">
+            <a class="nav-link" href="baptism.html">Baptism</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="weddings.html">Weddings</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="funerals.html">Funerals</a>
           </li>
+          
         </ul>
       </div>
     </nav>
