--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Custom styles-->
     <link href="styles.css" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <title>St. Helen's Church</title>
   </head>
  <body>
 
