--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
  <body>
 
-   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+   <nav class="navbar navbar-expand-sm navbar-dark bg-dark justify-content-center">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
