--- a/index.html
+++ b/index.html
@@ -16,47 +16,47 @@
  <body>
 
    <nav class="navbar navbar-expand-sm navbar-dark bg-dark justify-content-center">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar01" aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExample03">
+      <div class="collapse navbar-collapse" id="navbar01">
         <ul class="navbar-nav mr-auto">
           
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Worship</a>
+            <a class="nav-link dropdown-toggle" href="sunday-worship.html" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Worship</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Sunday worship</a>
-              <a class="dropdown-item" href="#">Daily worship</a>
-              <a class="dropdown-item" href="#">Children's church</a>
-              <a class="dropdown-item" href="#">Messy church</a>
-              <a class="dropdown-item" href="#">Online and apps</a>
+              <a class="dropdown-item" href="sunday-worship.html">Sunday worship</a>
+              <a class="dropdown-item" href="daily-worship.html">Daily worship</a>
+              <a class="dropdown-item" href="childrens-church.html">Children's church</a>
+              <a class="dropdown-item" href="messy-church.html">Messy church</a>
+              <a class="dropdown-item" href="online-and-apps.html">Online and apps</a>
             </div>
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community</a>
+            <a class="nav-link dropdown-toggle" href="choir-and-junior-choir.html" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community</a>
             <div class="dropdown-menu" aria-labelledby="dropdown02">
-              <a class="dropdown-item" href="#">Choir and junior choir</a>
-              <a class="dropdown-item" href="#">Pastoral care</a>
-              <a class="dropdown-item" href="#">Craft group</a>
-              <a class="dropdown-item" href="#">Fundraising</a>
+              <a class="dropdown-item" href="choir-and-junior-choir.html">Choir and junior choir</a>
+              <a class="dropdown-item" href="pastoral-care.html">Pastoral care</a>
+              <a class="dropdown-item" href="craft-group.html">Craft group</a>
+              <a class="dropdown-item" href="fundraising.html">Fundraising</a>
             </div>
           </li>          
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About us</a>
+            <a class="nav-link dropdown-toggle" href="st-helens-church.html" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About us</a>
             <div class="dropdown-menu" aria-labelledby="dropdown03">
-              <a class="dropdown-item" href="#">St. Helen's Church</a>
-              <a class="dropdown-item" href="#">Photographs</a>
-              <a class="dropdown-item" href="#">Video tour</a>
-              <a class="dropdown-item" href="#">Stained glass windows</a>
-              <a class="dropdown-item" href="#">Church organ</a>
-              <a class="dropdown-item" href="#">Church clock</a>
-              <a class="dropdown-item" href="#">Church tower</a>
-              <a class="dropdown-item" href="#">Welton knight</a>
-              <a class="dropdown-item" href="#">Visit us</a>
-              <a class="dropdown-item" href="#">Contact us</a>
+              <a class="dropdown-item" href="st-helens-church.html">St. Helen's Church</a>
+              <a class="dropdown-item" href="photographs.html">Photographs</a>
+              <a class="dropdown-item" href="video-tour.html">Video tour</a>
+              <a class="dropdown-item" href="stained-glass-windows.html">Stained glass windows</a>
+              <a class="dropdown-item" href="church-organ.html">Church organ</a>
+              <a class="dropdown-item" href="church-clock.html">Church clock</a>
+              <a class="dropdown-item" href="church-tower.html">Church tower</a>
+              <a class="dropdown-item" href="welton-knight.html">Welton knight</a>
+              <a class="dropdown-item" href="visit-us.html">Visit us</a>
+              <a class="dropdown-item" href="contact-us.html">Contact us</a>
             </div>
           </li>            
 
