--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="navbar-nav mr-auto">
           
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="sunday-worship.html" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Worship</a>
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Worship</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="sunday-worship.html">Sunday worship</a>
               <a class="dropdown-item" href="daily-worship.html">Daily worship</a>
@@ -35,7 +35,7 @@
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="choir-and-junior-choir.html" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community</a>
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community</a>
             <div class="dropdown-menu" aria-labelledby="dropdown02">
               <a class="dropdown-item" href="choir-and-junior-choir.html">Choir and junior choir</a>
               <a class="dropdown-item" href="pastoral-care.html">Pastoral care</a>
@@ -45,7 +45,7 @@
           </li>          
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="st-helens-church.html" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About us</a>
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About us</a>
             <div class="dropdown-menu" aria-labelledby="dropdown03">
               <a class="dropdown-item" href="st-helens-church.html">St. Helen's Church</a>
               <a class="dropdown-item" href="photographs.html">Photographs</a>
