--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+m<!doctype html>
 <html lang="en">
 
 <head>
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbar01">
       <ul class="navbar-nav mr-auto">
 
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Worship</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
