--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ m<!doctype html>
 
   <main role="main">
 
-    <section class="jumbotron text-center">
+    <section class="jumbotron">
       <div class="container">
         <h1 class="jumbotron-heading">Album example</h1>
         <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
