--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-sm navbar-light bg-dark">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar01" aria-controls="navbar01"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
