--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   
-  <div class="container">
+
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar01" aria-controls="navbar01"
@@ -28,7 +28,7 @@
       </button>
   
       <div class="collapse navbar-collapse" id="navbar01">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mx-auto">
   
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
@@ -83,6 +83,8 @@
         </ul>
       </div>
     </nav>
+
+    <div class="container">
   
     <main role="main">
   
