--- a/index.html
+++ b/index.html
@@ -18,124 +18,129 @@
 
 <body>
 
-  
-
-
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar01" aria-controls="navbar01"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  
-      <div class="collapse navbar-collapse" id="navbar01">
-        <ul class="navbar-nav mx-auto">
-  
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">Worship</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="sunday-worship.html">Sunday worship</a>
-              <a class="dropdown-item" href="daily-worship.html">Daily worship</a>
-              <a class="dropdown-item" href="childrens-church.html">Children's church</a>
-              <a class="dropdown-item" href="messy-church.html">Messy church</a>
-              <a class="dropdown-item" href="online-and-apps.html">Online and apps</a>
-            </div>
-          </li>
-  
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">Community</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown02">
-              <a class="dropdown-item" href="choir-and-junior-choir.html">Choir and junior choir</a>
-              <a class="dropdown-item" href="pastoral-care.html">Pastoral care</a>
-              <a class="dropdown-item" href="craft-group.html">Craft group</a>
-              <a class="dropdown-item" href="fundraising.html">Fundraising</a>
-            </div>
-          </li>
-  
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">About us</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown03">
-              <a class="dropdown-item" href="st-helens-church.html">St. Helen's Church</a>
-              <a class="dropdown-item" href="photographs.html">Photographs</a>
-              <a class="dropdown-item" href="video-tour.html">Video tour</a>
-              <a class="dropdown-item" href="stained-glass-windows.html">Stained glass windows</a>
-              <a class="dropdown-item" href="church-organ.html">Church organ</a>
-              <a class="dropdown-item" href="church-clock.html">Church clock</a>
-              <a class="dropdown-item" href="church-tower.html">Church tower</a>
-              <a class="dropdown-item" href="welton-knight.html">Welton knight</a>
-              <a class="dropdown-item" href="visit-us.html">Visit us</a>
-              <a class="dropdown-item" href="contact-us.html">Contact us</a>
-            </div>
-          </li>
-  
-          <li class="nav-item">
-            <a class="nav-link" href="baptism.html">Baptism</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="weddings.html">Weddings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="funerals.html">Funerals</a>
-          </li>
-  
-        </ul>
-      </div>
-    </nav>
+  <div id="primary-nav">
 
     <div class="container">
-  
-    <main role="main">
-  
-      <section class="jumbotron">
-        <div class="container">
-          <h1 class="jumbotron-heading">Welcome to St. Helen's</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
-            etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-        </div>
-      </section>
-  
-      <div class="album py-5 bg-light">
-        <div class="container">
-  
-          <div class="row">
-  
-            <div class="col-md-12">
-              <div class="card mb-12 box-shadow">
-                <img class="card-img-top" alt="Image">
-                <div class="card-body">
-                  <p class="card-text">Card.</p>
-                </div>
+
+      <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar01"
+          aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbar01">
+          <ul class="navbar-nav mx-auto">
+
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">Worship</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown01">
+                <a class="dropdown-item" href="sunday-worship.html">Sunday worship</a>
+                <a class="dropdown-item" href="daily-worship.html">Daily worship</a>
+                <a class="dropdown-item" href="childrens-church.html">Children's church</a>
+                <a class="dropdown-item" href="messy-church.html">Messy church</a>
+                <a class="dropdown-item" href="online-and-apps.html">Online and apps</a>
               </div>
-            </div>
-  
-            <div class="col-md-12">
-              <div class="card mb-12 box-shadow">
-                <img class="card-img-top" alt="Image">
-                <div class="card-body">
-                  <p class="card-text">Card.</p>
-                </div>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">Community</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown02">
+                <a class="dropdown-item" href="choir-and-junior-choir.html">Choir and junior choir</a>
+                <a class="dropdown-item" href="pastoral-care.html">Pastoral care</a>
+                <a class="dropdown-item" href="craft-group.html">Craft group</a>
+                <a class="dropdown-item" href="fundraising.html">Fundraising</a>
               </div>
-            </div>
-  
-          </div>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">About us</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown03">
+                <a class="dropdown-item" href="st-helens-church.html">St. Helen's Church</a>
+                <a class="dropdown-item" href="photographs.html">Photographs</a>
+                <a class="dropdown-item" href="video-tour.html">Video tour</a>
+                <a class="dropdown-item" href="stained-glass-windows.html">Stained glass windows</a>
+                <a class="dropdown-item" href="church-organ.html">Church organ</a>
+                <a class="dropdown-item" href="church-clock.html">Church clock</a>
+                <a class="dropdown-item" href="church-tower.html">Church tower</a>
+                <a class="dropdown-item" href="welton-knight.html">Welton knight</a>
+                <a class="dropdown-item" href="visit-us.html">Visit us</a>
+                <a class="dropdown-item" href="contact-us.html">Contact us</a>
+              </div>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="baptism.html">Baptism</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="weddings.html">Weddings</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="funerals.html">Funerals</a>
+            </li>
+
+          </ul>
         </div>
-      </div>
-  
-    </main>
-  
-    <footer class="text-muted">
+      </nav>
+
+    </div>
+
+  </div>
+
+  <main role="main">
+
+    <section class="jumbotron">
       <div class="container">
-        <p class="float-right">
-          <a href="#">Back to top</a>
-        </p>
+        <h1 class="jumbotron-heading">Welcome to St. Helen's</h1>
+        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
+          etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
       </div>
-    </footer>
+    </section>
 
-  </div>  
+    <div class="album py-5 bg-light">
+      <div class="container">
 
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <div class="row">
+
+          <div class="col-md-12">
+            <div class="card mb-12 box-shadow">
+              <img class="card-img-top" alt="Image">
+              <div class="card-body">
+                <p class="card-text">Card.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-12">
+            <div class="card mb-12 box-shadow">
+              <img class="card-img-top" alt="Image">
+              <div class="card-body">
+                <p class="card-text">Card.</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+  </main>
+
+  <footer class="text-muted">
+    <div class="container">
+      <p class="float-right">
+        <a href="#">Back to top</a>
+      </p>
+    </div>
+  </footer>
+
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
 </body>
 
