--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbar01">
-          <ul class="navbar-nav mx-auto">
+          <ul class="navbar-nav mr-auto">
 
             <li class="nav-item dropdown active">
               <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
