--- a/index.html
+++ b/index.html
@@ -104,25 +104,30 @@
 
         <div class="row">
 
-          <div class="col-md-12">
-            <div class="card mb-12 box-shadow">
-              <img class="card-img-top" alt="Image">
-              <div class="card-body">
-                <p class="card-text">Card.</p>
-              </div>
+          <div class="card">
+            <div class="card-header">
+              Featured
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
 
-          <div class="col-md-12">
-            <div class="card mb-12 box-shadow">
-              <img class="card-img-top" alt="Image">
-              <div class="card-body">
-                <p class="card-text">Card.</p>
-              </div>
+          <div class="card">
+            <div class="card-header">
+              Featured
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
 
         </div>
+        
       </div>
     </div>
 
