--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
         <div class="collapse navbar-collapse" id="navbar01">
           <ul class="navbar-nav mr-auto">
 
-            <li class="nav-item dropdown active">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>  
+
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">Worship</a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
