--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+  <div class="container">
+    <img src="img/header.jpg" alt="header logo"/>
+  </div>  
 
   <div id="primary-nav">
 
