--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </li>  
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">Worship</a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="sunday-worship.html">Sunday worship</a>
@@ -51,7 +51,7 @@
             </li>
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true"
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-bs-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">Community</a>
               <div class="dropdown-menu" aria-labelledby="dropdown02">
                 <a class="dropdown-item" href="choir-and-junior-choir.html">Choir and junior choir</a>
@@ -62,7 +62,7 @@
             </li>
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true"
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">About us</a>
               <div class="dropdown-menu" aria-labelledby="dropdown03">
                 <a class="dropdown-item" href="st-helens-church.html">St. Helen's Church</a>
