--- a/index.html
+++ b/index.html
@@ -111,27 +111,33 @@
 
         <div class="row">
 
-          <div class="card">
-            <div class="card-header">
-              Featured
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="" class="img-fluid rounded-start" alt="image">
             </div>
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Sunday 20th July</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
             </div>
           </div>
+        </div>
 
-          <div class="card">
-            <div class="card-header">
-              Featured
+          <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="" class="img-fluid rounded-start" alt="image">
             </div>
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Sunday 20th July</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
             </div>
           </div>
+        </div>
 
         </div>
         
