--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="" class="img-fluid rounded-start" alt="image">
+              <img src="MessyChurch.jpg" class="img-fluid rounded-start" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -128,7 +128,7 @@
           <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="" class="img-fluid rounded-start" alt="image">
+              <img src="MessyChurch.jpg" class="img-fluid rounded-start" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
