--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <main role="main">
 
-    <section class="jumbotron">
+    <section class="jumbotron mt-10">
       <div class="container">
         <h1 class="jumbotron-heading">Welcome to St. Helen's</h1>
         <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
