--- a/index.html
+++ b/index.html
@@ -146,13 +146,11 @@
 
   </main>
 
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-right">
-        <a href="#">Back to top</a>
-      </p>
+  <nav class="navbar sticky-bottom bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Sticky bottom</a>
     </div>
-  </footer>
+  </nav>
 
   </div>
 
