--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
 
   </main>
 
-  <nav class="navbar sticky-bottom bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Sticky bottom</a>
-    </div>
-  </nav>
+<nav class="navbar fixed-bottom bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Fixed bottom</a>
+  </div>
+</nav>
 
   </div>
 
