--- a/baptism.html
+++ b/baptism.html
@@ -107,7 +107,7 @@
       </div>
     </section>
 
-    <iframe src="https://youtu.be/EnpXtAPFZqc">
+    <iframe width="420" height="315" src="https://youtu.be/EnpXtAPFZqc">
     </iframe>
 
     
