--- a/baptism.html
+++ b/baptism.html
@@ -114,11 +114,15 @@
 
   </main>
 
-<nav class="navbar fixed-bottom bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">St. Helen's Church</a>
-  </div>
-</nav>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="collapse navbar-collapse" id="navbar01">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">St. Helen's</a>
+        </li>  
+      </ul>
+    </div>
+  </nav>
 
   </div>
 
