--- a/baptism.html
+++ b/baptism.html
@@ -95,6 +95,7 @@
     </div>
 
   </div>
+  
 
   <main role="main">
 
@@ -110,20 +111,21 @@
     <iframe width="420" height="315" src="https://youtu.be/EnpXtAPFZqc">
     </iframe>
 
-    
-
   </main>
+  
 
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="collapse navbar-collapse" id="navbar01">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">St. Helen's</a>
-        </li>  
-      </ul>
-    </div>
-  </nav>
-
+  <div id="primary-nav">
+    <div class="container">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="collapse navbar-collapse" id="navbar01">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">St. Helen's</a>
+            </li>  
+          </ul>
+        </div>
+      </nav>
+    </div>  
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
