--- a/baptism.html
+++ b/baptism.html
@@ -120,7 +120,7 @@
         <div class="collapse navbar-collapse" id="navbar01">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">St. Helen's</a>
+              <a class="nav-link active" aria-current="page" href="index.html">St. Helen's Church</a>
             </li>  
           </ul>
         </div>
