--- a/baptism.html
+++ b/baptism.html
@@ -108,8 +108,8 @@
       </div>
     </section>
 
-    <div class="container">
-      <iframe width="800" height="600" src="https://www.youtube.com/embed/EnpXtAPFZqc?si=Fo3ye_iaWBLlCg4v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div style="display: flex; justify-content: center;">
+      <iframe style="aspect-ratio: 16 / 9; width: 100% !important;" src="https://www.youtube.com/embed/EnpXtAPFZqc?si=Fo3ye_iaWBLlCg4v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </main>
   
