--- a/baptism.html
+++ b/baptism.html
@@ -113,6 +113,19 @@
         <iframe style="aspect-ratio: 16 / 9; width: 100% !important;" src="https://www.youtube.com/embed/EnpXtAPFZqc?si=Fo3ye_iaWBLlCg4v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
+
+    <p></p>
+
+    <ul>
+      <li>Do parents need to be Baptised already? No. However, if you are interested in being baptised too, we would love to help you.</li>
+      <li>Do Godparents need to be Baptised? Yes. Godparents make promises to care for baby&rsquo;s Christian upbringing, and to pray regularly. They need to be Baptised, and ideally, Confirmed; but Confirmation isn&rsquo;t a strict requirement.</li>
+      <li>How many Godparents can my child have? There are typically three Godparents for each child: two of the same sex as the child and one of the opposite sex.</li>
+      <li>How much does Baptism cost? There is no financial cost, but donations are welcome.</li>
+      <li>Can we have a private Baptism? No. Baptism is a public service of welcome into the church, however we do not encourage the use of social media during a service, so it is only public to those present.</li>
+      <li>When do you hold Baptism services? On the second Sunday of the month.</li>
+      <li>Can you meet us at home? In the month before your child is Baptised, one of the Baptism team will visit you at home to talk through the service. If all parents and Godparents can be present that is helpful &ndash; as we discuss the promises everyone will be making.</li>
+      <li>If you have further questions please contact our Baptism Coordinator, or come along to a main Sunday Service at 10:15am and talk to us.</li>
+    </ul>
     
   </main>
   
