--- a/baptism.html
+++ b/baptism.html
@@ -102,9 +102,9 @@
     <section class="jumbotron mt-5">
       <div class="container">
         <h1 class="jumbotron-heading">Baptism</h1>
-        <p class="lead text-muted">Baptism, also known as Christening, is a special moment where we take our first steps hand-in-hand with God on our journey of faith and we are following in the footsteps of Jesus, who was himself Baptised at the beginning of his ministry.</p>
-        <p class="lead text-muted"></p>
-        <p class="lead text-muted">We are delighted to welcome anyone within the Parish who would like to be Baptised. All we ask that you come along to a main Sunday Service, at 10:15am, to meet us and make an appointment.</p>
+        <p>Baptism, also known as Christening, is a special moment where we take our first steps hand-in-hand with God on our journey of faith and we are following in the footsteps of Jesus, who was himself Baptised at the beginning of his ministry.</p>
+        <p></p>
+        <p>We are delighted to welcome anyone within the Parish who would like to be Baptised. All we ask that you come along to a main Sunday Service, at 10:15am, to meet us and make an appointment.</p>
       </div>
     </section>
 
@@ -116,16 +116,18 @@
 
     <p></p>
 
-    <ul>
-      <li>Do parents need to be Baptised already? No. However, if you are interested in being baptised too, we would love to help you.</li>
-      <li>Do Godparents need to be Baptised? Yes. Godparents make promises to care for baby&rsquo;s Christian upbringing, and to pray regularly. They need to be Baptised, and ideally, Confirmed; but Confirmation isn&rsquo;t a strict requirement.</li>
-      <li>How many Godparents can my child have? There are typically three Godparents for each child: two of the same sex as the child and one of the opposite sex.</li>
-      <li>How much does Baptism cost? There is no financial cost, but donations are welcome.</li>
-      <li>Can we have a private Baptism? No. Baptism is a public service of welcome into the church, however we do not encourage the use of social media during a service, so it is only public to those present.</li>
-      <li>When do you hold Baptism services? On the second Sunday of the month.</li>
-      <li>Can you meet us at home? In the month before your child is Baptised, one of the Baptism team will visit you at home to talk through the service. If all parents and Godparents can be present that is helpful &ndash; as we discuss the promises everyone will be making.</li>
-      <li>If you have further questions please contact our Baptism Coordinator, or come along to a main Sunday Service at 10:15am and talk to us.</li>
-    </ul>
+    <div class="container">
+      <ul>
+        <li>Do parents need to be Baptised already? No. However, if you are interested in being baptised too, we would love to help you.</li>
+        <li>Do Godparents need to be Baptised? Yes. Godparents make promises to care for baby&rsquo;s Christian upbringing, and to pray regularly. They need to be Baptised, and ideally, Confirmed; but Confirmation isn&rsquo;t a strict requirement.</li>
+        <li>How many Godparents can my child have? There are typically three Godparents for each child: two of the same sex as the child and one of the opposite sex.</li>
+        <li>How much does Baptism cost? There is no financial cost, but donations are welcome.</li>
+        <li>Can we have a private Baptism? No. Baptism is a public service of welcome into the church, however we do not encourage the use of social media during a service, so it is only public to those present.</li>
+        <li>When do you hold Baptism services? On the second Sunday of the month.</li>
+        <li>Can you meet us at home? In the month before your child is Baptised, one of the Baptism team will visit you at home to talk through the service. If all parents and Godparents can be present that is helpful &ndash; as we discuss the promises everyone will be making.</li>
+        <li>If you have further questions please contact our Baptism Coordinator, or come along to a main Sunday Service at 10:15am and talk to us.</li>
+      </ul>
+    </div>  
     
   </main>
   
