--- a/baptism.html
+++ b/baptism.html
@@ -117,6 +117,7 @@
     <p></p>
 
     <div class="container">
+      <h2>Questions and answers</h2>
       <ul>
         <li>Do parents need to be Baptised already? No. However, if you are interested in being baptised too, we would love to help you.</li>
         <li>Do Godparents need to be Baptised? Yes. Godparents make promises to care for baby&rsquo;s Christian upbringing, and to pray regularly. They need to be Baptised, and ideally, Confirmed; but Confirmation isn&rsquo;t a strict requirement.</li>
