Update all pages

--- a/baptism.html
+++ b/baptism.html
@@ -18,13 +18,11 @@
 
 <body>
   <div class="container">
-    <img src="img/header.jpg" alt="header logo"/>
-  </div>  
+    <img src="img/header.jpg" class="img-fluid" alt="header logo" />
+  </div>
 
   <div id="primary-nav">
-
     <div class="container">
-
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar01"
           aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,14 +31,12 @@
 
         <div class="collapse navbar-collapse" id="navbar01">
           <ul class="navbar-nav mr-auto">
-
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            </li>  
-
+            </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">Worship</a>
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">Worship</a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="sunday-worship.html">Sunday worship</a>
                 <a class="dropdown-item" href="daily-worship.html">Daily worship</a>
@@ -49,10 +45,9 @@
                 <a class="dropdown-item" href="online-and-apps.html">Online and apps</a>
               </div>
             </li>
-
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-bs-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">Community</a>
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">Community</a>
               <div class="dropdown-menu" aria-labelledby="dropdown02">
                 <a class="dropdown-item" href="choir-and-junior-choir.html">Choir and junior choir</a>
                 <a class="dropdown-item" href="pastoral-care.html">Pastoral care</a>
@@ -60,10 +55,9 @@
                 <a class="dropdown-item" href="fundraising.html">Fundraising</a>
               </div>
             </li>
-
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">About us</a>
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">About us</a>
               <div class="dropdown-menu" aria-labelledby="dropdown03">
                 <a class="dropdown-item" href="st-helens-church.html">St. Helen's Church</a>
                 <a class="dropdown-item" href="photographs.html">Photographs</a>
@@ -77,7 +71,6 @@
                 <a class="dropdown-item" href="contact-us.html">Contact us</a>
               </div>
             </li>
-
             <li class="nav-item">
               <a class="nav-link" href="baptism.html">Baptism</a>
             </li>
@@ -87,51 +80,65 @@
             <li class="nav-item">
               <a class="nav-link" href="funerals.html">Funerals</a>
             </li>
-
           </ul>
         </div>
       </nav>
-
     </div>
-
   </div>
-  
 
   <main role="main">
 
     <section class="jumbotron mt-5">
       <div class="container">
         <h1 class="jumbotron-heading">Baptism</h1>
-        <p>Baptism, also known as Christening, is a special moment where we take our first steps hand-in-hand with God on our journey of faith and we are following in the footsteps of Jesus, who was himself Baptised at the beginning of his ministry.</p>
+        <p>Baptism, also known as Christening, is a special moment where we take our first steps hand-in-hand with God
+          on our journey of faith and we are following in the footsteps of Jesus, who was himself Baptised at the
+          beginning of his ministry.</p>
         <p></p>
-        <p>We are delighted to welcome anyone within the Parish who would like to be Baptised. All we ask that you come along to a main Sunday Service, at 10:15am, to meet us and make an appointment.</p>
+        <p>We are delighted to welcome anyone within the Parish who would like to be Baptised. All we ask that you come
+          along to a main Sunday Service, at 10:15am, to meet us and make an appointment.</p>
       </div>
     </section>
 
     <div class="container">
       <div style="display: flex; justify-content: center;">
-        <iframe style="aspect-ratio: 16 / 9; width: 100% !important;" src="https://www.youtube.com/embed/EnpXtAPFZqc?si=Fo3ye_iaWBLlCg4v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe style="aspect-ratio: 16 / 9; width: 100% !important;"
+          src="https://www.youtube.com/embed/EnpXtAPFZqc?si=Fo3ye_iaWBLlCg4v" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
-
-    <p></p>
 
     <div class="container">
       <h5>Frequently Asked Questions</h5>
       <ul>
-        <li>Do parents need to be Baptised already? No. However, if you are interested in being baptised too, we would love to help you.</li>
-        <li>Do Godparents need to be Baptised? Yes. Godparents make promises to care for baby&rsquo;s Christian upbringing, and to pray regularly. They need to be Baptised, and ideally, Confirmed; but Confirmation isn&rsquo;t a strict requirement.</li>
-        <li>How many Godparents can my child have? There are typically three Godparents for each child: two of the same sex as the child and one of the opposite sex.</li>
+        <li>Do parents need to be Baptised already? No. However, if you are interested in being baptised too, we would
+          love to help you.</li>
+        <li>Do Godparents need to be Baptised? Yes. Godparents make promises to care for baby&rsquo;s Christian
+          upbringing, and to pray regularly. They need to be Baptised, and ideally, Confirmed; but Confirmation
+          isn&rsquo;t a strict requirement.</li>
+        <li>How many Godparents can my child have? There are typically three Godparents for each child: two of the same
+          sex as the child and one of the opposite sex.</li>
         <li>How much does Baptism cost? There is no financial cost, but donations are welcome.</li>
-        <li>Can we have a private Baptism? No. Baptism is a public service of welcome into the church, however we do not encourage the use of social media during a service, so it is only public to those present.</li>
+        <li>Can we have a private Baptism? No. Baptism is a public service of welcome into the church, however we do not
+          encourage the use of social media during a service, so it is only public to those present.</li>
         <li>When do you hold Baptism services? On the second Sunday of the month.</li>
-        <li>Can you meet us at home? In the month before your child is Baptised, one of the Baptism team will visit you at home to talk through the service. If all parents and Godparents can be present that is helpful &ndash; as we discuss the promises everyone will be making.</li>
-        <li>If you have further questions please contact our Baptism Coordinator, or come along to a main Sunday Service at 10:15am and talk to us.</li>
+        <li>Can you meet us at home? In the month before your child is Baptised, one of the Baptism team will visit you
+          at home to talk through the service. If all parents and Godparents can be present that is helpful &ndash; as
+          we discuss the promises everyone will be making.</li>
+        <li>If you have further questions please contact our Baptism Coordinator, or come along to a main Sunday Service
+          at 10:15am and talk to us.</li>
       </ul>
-    </div>  
-    
+    </div>
+
+    <p></p>    
+
+    <div class="container">
+      <a href="https://churchofenglandchristenings.org/" target="_blank"><img class="img-fluid" src="img/baptism.jpg" alt="Baptism" /></a>
+    </div>    
+
   </main>
-  
 
   <div id="primary-nav">
     <div class="container">
@@ -139,16 +146,18 @@
         <div class="collapse navbar-collapse" id="navbar01">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">St. Helen's Church</a>
-            </li>  
+              <a class="nav-link active" aria-current="page" href="safeguarding.html">Safeguarding</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="privicy-policy.html">Privicy</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="churchyard-rules.html">Churchyard Rules</a>
+            </li>
           </ul>
         </div>
       </nav>
-    </div>  
-  </div>
-
-  <div class="container">
-    <img src="img/baptism.jpg" alt="Baptism"/>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -156,5 +165,5 @@
     crossorigin="anonymous"></script>
 
 </body>
- 
+
 </html>
