--- a/churchyard-rules.html
+++ b/churchyard-rules.html
@@ -90,7 +90,7 @@
 
     <section class="jumbotron mt-5">
       <div class="container">
-        <h1 class="jumbotron-heading">Stained Glass Windows</h1>
+        <h1 class="jumbotron-heading">Churchyard Rules</h1>
         <p></p>
         <p></p>
       </div>
