--- a/funerals.html
+++ b/funerals.html
@@ -17,12 +17,114 @@
 </head>
 
 <body>
+  <div class="container">
+    <img src="img/header.jpg" class="img-fluid" alt="header logo" />
+  </div>
 
+  <div id="primary-nav">
+    <div class="container">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar01"
+          aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbar01">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">Worship</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown01">
+                <a class="dropdown-item" href="sunday-worship.html">Sunday worship</a>
+                <a class="dropdown-item" href="daily-worship.html">Daily worship</a>
+                <a class="dropdown-item" href="childrens-church.html">Children's church</a>
+                <a class="dropdown-item" href="messy-church.html">Messy church</a>
+                <a class="dropdown-item" href="online-and-apps.html">Online and apps</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">Community</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown02">
+                <a class="dropdown-item" href="choir-and-junior-choir.html">Choir and junior choir</a>
+                <a class="dropdown-item" href="pastoral-care.html">Pastoral care</a>
+                <a class="dropdown-item" href="craft-group.html">Craft group</a>
+                <a class="dropdown-item" href="fundraising.html">Fundraising</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">About us</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown03">
+                <a class="dropdown-item" href="st-helens-church.html">St. Helen's Church</a>
+                <a class="dropdown-item" href="photographs.html">Photographs</a>
+                <a class="dropdown-item" href="video-tour.html">Video tour</a>
+                <a class="dropdown-item" href="stained-glass-windows.html">Stained glass windows</a>
+                <a class="dropdown-item" href="church-organ.html">Church organ</a>
+                <a class="dropdown-item" href="church-clock.html">Church clock</a>
+                <a class="dropdown-item" href="church-tower.html">Church tower</a>
+                <a class="dropdown-item" href="welton-knight.html">Welton knight</a>
+                <a class="dropdown-item" href="visit-us.html">Visit us</a>
+                <a class="dropdown-item" href="contact-us.html">Contact us</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="baptism.html">Baptism</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="weddings.html">Weddings</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="funerals.html">Funerals</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </div>
+
+  <main role="main">
+
+    <section class="jumbotron mt-5">
+      <div class="container">
+        <h1 class="jumbotron-heading">Funerals</h1>
+        <p>God’s love extends over all creation. Every life is precious to God. Christians have always believed that there is life beyond death, through Jesus Christ. However, even those who share such faith struggle with a real sense of loss at the death of a loved one, so St Helen’s Church offers ministry to all who mourn the loss of a loved one from within the Parish of ‘Welton with Melton’ – whether they regularly attended church or not. We can offer services in the Church or the Crematorium, followed by burial or cremation.</p>
+        <p></p>
+      </div>
+    </section>
+
+
+   
+
+  </main>
+
+  <div id="primary-nav">
+    <div class="container">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="collapse navbar-collapse" id="navbar01">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="safeguarding.html">Safeguarding</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="privicy-policy.html">Privicy</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="churchyard-rules.html">Churchyard Rules</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 
 </body>
- 
+
 </html>
