--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
 
 <body>
   <div class="container">
-    <img src="img/header.jpg" alt="header logo"/>
-  </div>  
+    <img src="img/header.jpg" class="img-fluid" alt="header logo" />
+  </div>
 
   <div id="primary-nav">
-
     <div class="container">
-
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar01"
           aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,14 +31,12 @@
 
         <div class="collapse navbar-collapse" id="navbar01">
           <ul class="navbar-nav mr-auto">
-
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            </li>  
-
+            </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">Worship</a>
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">Worship</a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="sunday-worship.html">Sunday worship</a>
                 <a class="dropdown-item" href="daily-worship.html">Daily worship</a>
@@ -49,10 +45,9 @@
                 <a class="dropdown-item" href="online-and-apps.html">Online and apps</a>
               </div>
             </li>
-
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-bs-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">Community</a>
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">Community</a>
               <div class="dropdown-menu" aria-labelledby="dropdown02">
                 <a class="dropdown-item" href="choir-and-junior-choir.html">Choir and junior choir</a>
                 <a class="dropdown-item" href="pastoral-care.html">Pastoral care</a>
@@ -60,10 +55,9 @@
                 <a class="dropdown-item" href="fundraising.html">Fundraising</a>
               </div>
             </li>
-
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">About us</a>
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">About us</a>
               <div class="dropdown-menu" aria-labelledby="dropdown03">
                 <a class="dropdown-item" href="st-helens-church.html">St. Helen's Church</a>
                 <a class="dropdown-item" href="photographs.html">Photographs</a>
@@ -77,7 +71,6 @@
                 <a class="dropdown-item" href="contact-us.html">Contact us</a>
               </div>
             </li>
-
             <li class="nav-item">
               <a class="nav-link" href="baptism.html">Baptism</a>
             </li>
@@ -87,22 +80,19 @@
             <li class="nav-item">
               <a class="nav-link" href="funerals.html">Funerals</a>
             </li>
-
           </ul>
         </div>
       </nav>
-
     </div>
-
   </div>
 
   <main role="main">
 
     <section class="jumbotron mt-5">
       <div class="container">
-        <h1 class="jumbotron-heading">Welcome to St. Helen's</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
-          etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+        <h1 class="jumbotron-heading">Children's Church</h1>
+        <p></p>
+        <p></p>
       </div>
     </section>
 
@@ -139,19 +129,29 @@
           </div>
         </div>
 
-        </div>
-        
       </div>
     </div>
-
+   
   </main>
 
-<nav class="navbar fixed-bottom bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Fixed bottom</a>
-  </div>
-</nav>
-
+  <div id="primary-nav">
+    <div class="container">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="collapse navbar-collapse" id="navbar01">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="safeguarding.html">Safeguarding</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="privicy-policy.html">Privicy</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="churchyard-rules.html">Churchyard Rules</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -159,5 +159,5 @@
     crossorigin="anonymous"></script>
 
 </body>
- 
+
 </html>
