Update photos page

--- a/photographs.html
+++ b/photographs.html
@@ -96,13 +96,10 @@
     <section class="jumbotron mt-3">
       <div class="container">
         <h1 class="jumbotron-heading">Photographs</h1>
-        <p></p>
-        <p></p>
+        <p>Come back soon.</p>
       </div>
     </section>
 
-
-   
 
   </main>
 
