--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <div class="card-body">
                 <h5 class="card-title">Welcome to St. Helen's Church</h5>
                 <p class="card-text">Thank you for visiting St. Helen’s church web site and a very warm welcome from the ministry team. St. Helen’s is at the heart of the local community and offers a variety of forms of worship to help us cater for everyone.</p>
-                <p class="card-text"><small class="text-body-secondary">Revd. Margaret Gallager</small></p>
+                <p class="card-text"><small class="text-body-secondary">Revd. Margaret Gallagher</small></p>
               </div>
             </div>
           </div>
