--- a/index.html
+++ b/index.html
@@ -146,6 +146,20 @@
               </div>
             </div>
           </div>
+        </div> 
+        
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="img/hymns-and-pimms.jpg" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Sunday 31st August 10:15 AM - Hymns and Pimms</h5>
+                <p class="card-text">Please join us for the popular Hymns and Pimms event.</p>
+              </div>
+            </div>
+          </div>
         </div>         
         
         <div class="card mb-3">
@@ -240,7 +254,7 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Sunday 28th September 6:30 PM (Harvest Choral Evensong)</h5>
-                <p class="card-text">Please join us for our Harvest Choral Evensong, followed by a harvest Bring and Share Supper.</p>
+                <p class="card-text">Please join us for our Harvest Choral Evensong, followed by a harvest 'Bring and Share' supper.</p>
               </div>
             </div>
           </div>
