--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 31st August 10:15 AM - Hymns and Pimms</h5>
+                <h5 class="card-title">Sunday 31st August TBA PM - Hymns and Pimms</h5>
                 <p class="card-text">Please join us for the popular Hymns and Pimms event.</p>
               </div>
             </div>
