--- a/index.html
+++ b/index.html
@@ -353,9 +353,11 @@
               <div class="card-body">
                 <h5 class="card-title">Advent and Christmas Dates</h5>
                 <p class="card-text">
+                  TBA PM - Advent Carol Service<br/>
                   21st December 6:30 PM - Service of Nine Lessons and Carols<br/>
                   24th December 11:30 PM - Midnight Eucharist<br/>
                   25th December 10:15 AM - Christmas Morning Service<br/>
+                  TBA January 2026 10:15 AM - Three Kings Festival
                 </p>
               </div>
             </div>
