--- a/index.html
+++ b/index.html
@@ -190,6 +190,22 @@
           </div>
         </div>          
 
+               <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="img/FunConcert.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Saturday 20th September 5:30 - 8:30 PM - Fun Concert</h5>
+                <p class="card-text">St Helen’s Choir and Junior Choir is holding a choir concert in the church 5.30 – 8pm on Saturday 20 September 2025.  Coffee, tea, juice and cake included in the ticket price.</p>
+                <p class="card-text">Adult = £10 / Senior Citizen = £7.50 / Children over 5 = £5.</p>
+                <p class="card-text">We hope you can join us!</p>
+              </div>
+            </div>
+          </div>
+        </div>  
+
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
@@ -202,21 +218,7 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-3">
-              <img src="img/OrganPipes.jpg" class="img-fluid rounded" alt="image">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Saturday 20th September 5:30 - 8:30 PM - Fun Concert</h5>
-                <p class="card-text">Please join us for a Fun Concert, with music and singing by St. Helen's choir.</p>
-              </div>
-            </div>
-          </div>
-        </div>          
+        </div>         
 
         <div class="card mb-3">
           <div class="row g-0">
