--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 31st August TBA PM - Hymns and Pimms</h5>
+                <h5 class="card-title">Sunday 31st August 4:00 PM - Hymns and Pimms</h5>
                 <p class="card-text">Please join us for the popular Hymns and Pimms event.</p>
               </div>
             </div>
@@ -200,6 +200,7 @@
                 <h5 class="card-title">Saturday 20th September 5:30 - 8:00 PM - Fun Concert</h5>
                 <p class="card-text">St Helen’s Choir and Junior Choir is holding a choir concert in the church 5.30 – 8pm on Saturday 20 September 2025.  Coffee, tea, juice and cake included in the ticket price.</p>
                 <p class="card-text">Adult = £10 / Senior Citizen = £7.50 / Children over 5 = £5.</p>
+                <p class="card-text">Ring or text Helen on 07795 374018 or email newt@newt.karoo.co.uk</p>
                 <p class="card-text">We hope you can join us!</p>
               </div>
             </div>
