--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
                   7th December 3:15 PM - Messy Church Christingle Service<br/>
                   14th December 3:00 PM - Outdoor Nativity Play<br/>
                   21st December 6:30 PM - Service of Nine Lessons and Carols<br/>
+                  24th December TBA PM - Crib Service<br/>
                   24th December 11:30 PM - Midnight Eucharist<br/>
                   25th December 10:15 AM - Christmas Morning Service<br/>
                   TBA January 2026 10:15 AM - Three Kings Festival
