--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 21st September 3:30 PM (Messy Church)</h5>
+                <h5 class="card-title">Sunday 21st September 3:15 PM (Messy Church)</h5>
                 <p class="card-text">At Messy Church we use creative activities to explore Bible stories.</p>
               </div>
             </div>
@@ -271,8 +271,8 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Saturday 4th October TBA PM - RSCM Festival Evensong at Howden Minster</h5>
-                <p class="card-text">Please join us for this Royal Society of Church Music Festival Evensong service.</p>
+                <h5 class="card-title">Saturday 4th October 5:00 PM - RSCM Festival Evensong at Howden Minster</h5>
+                <p class="card-text">Please join us for this Royal School of Church Music Festival Evensong service. The service will involve choirs from across the Yorkshire region.</p>
               </div>
             </div>
           </div>
@@ -341,7 +341,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 19th October 3:30 PM (Messy Church)</h5>
+                <h5 class="card-title">Sunday 19th October 3:15 PM (Messy Church)</h5>
                 <p class="card-text">At Messy Church we use creative activities to explore Bible stories.</p>
               </div>
             </div>
@@ -369,7 +369,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Wednesday 29th October Time TBA - Craft Fair</h5>
+                <h5 class="card-title">Wednesday 29th November Time 10:30 AM - 2:30 PM - Craft Fair</h5>
                 <p class="card-text">Further details to follow...</p>
               </div>
             </div>
@@ -385,7 +385,7 @@
               <div class="card-body">
                 <h5 class="card-title">Advent and Christmas Dates</h5>
                 <p class="card-text">
-                  30th November TBA PM - Advent Carol Service<br/>
+                  30th November 6:30 PM - Advent Carol Service<br/>
                   7th December 3:15 PM - Messy Church Christingle Service<br/>
                   14th December 3:00 PM - Outdoor Nativity Play<br/>
                   21st December 6:30 PM - Service of Nine Lessons and Carols<br/>
