--- a/index.html
+++ b/index.html
@@ -118,23 +118,9 @@
             </div>            
           </div>
         </div>        
-        
+                
 
         <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-3">
-              <img src="img/HolyCrossDayStHelen.jpg" class="img-fluid rounded" alt="image">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Sunday 14th September 10:15 AM (Parish Eucharist - Holy Cross Day)</h5>
-                <p class="card-text">This is our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
-              </div>
-            </div>
-          </div>
-        </div>          
-
-               <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
               <img src="img/FunConcert.png" class="img-fluid rounded" alt="image">
@@ -326,8 +312,8 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Wednesday 29th November 10:30 AM - 2:30 PM - Craft Fair</h5>
-                <p class="card-text">Further details to follow...</p>
+                <h5 class="card-title">Saturday 29th November 10:30 AM - 2:30 PM - Craft Fair</h5>
+                <p class="card-text">There will a wide range of hand-made gifts, made by the St. Helen's craft group. There will be a tombola, cakes and refreshments, an opportunity for children to make a gift, and much more! All proceeds go to keep our beautiful church open for worship.</p>
               </div>
             </div>
           </div>
