--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                   24th December TBA PM - Crib Service<br/>
                   24th December 11:30 PM - Midnight Eucharist<br/>
                   25th December 10:15 AM - Christmas Morning Service<br/>
-                  TBA January 2026 10:15 AM - Three Kings Festival
+                  4th January 2026 10:15 AM - Three Kings Festival
                 </p>
               </div>
             </div>
