--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
               </div>
             </div>
           </div>
+        </div>     
+        
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-3">
+              <img src="img/Candles.png" class="img-fluid rounded" alt="image">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Sunday 2nd November 6:30 PM - The Commemoration of All Souls</h5>
+                <p class="card-text">Remember your departed loved ones in this Service of Remembrance.</p>
+              </div>
+            </div>
+          </div>
         </div>          
 
         <div class="card mb-3">
