--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
-              <img src="img/All-Age.jpeg" class="img-fluid rounded" alt="image">
+              <img src="img/All-Saints.jpg" class="img-fluid rounded" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 2nd November 10:15 AM - All Age</h5>
+                <h5 class="card-title">Sunday 2nd November 10:15 AM - All Saints (All Age)</h5>
                 <p class="card-text">This service has a more relaxed style and content, suitable for the whole family.</p>
               </div>
             </div>
@@ -150,12 +150,12 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
-              <img src="img/EucharistGlass2.png" class="img-fluid rounded" alt="image">
+              <img src="img/Poppies.jpg" class="img-fluid rounded" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 9th November 10:15 AM - Parish Eucharist</h5>
-                <p class="card-text">This is our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
+                <h5 class="card-title">Sunday 9th November 10:15 AM - Remembrance Sunday (Parish Eucharist)</h5>
+                <p class="card-text">Please join us as we commemorate the contribution of British and Commonwealth military and civilian servicemen and women in the two World Wars and later conflicts. There will be an Act of Remembrance at 11:00.</p>
               </div>
             </div>
           </div>
@@ -192,12 +192,12 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
-              <img src="img/Eucharist.png" class="img-fluid rounded" alt="image">
+              <img src="img/CeciliaAndAngel.jpg" class="img-fluid rounded" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Sunday 23rd November 10:15 AM - Parish Eucharist</h5>
-                <p class="card-text">This is our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
+                <h5 class="card-title">Sunday 23rd November 10:15 AM - Service for Christ the King and St Cecilia (Parish Eucharist)</h5>
+                <p class="card-text">Please join us at this service as celebrate the Feast of Christ the King on this Sunday next before Advent, marking the end of the liturgical year. We also celebrate St. Cecilia, a Roman martyr from the third century, and the patron saint of music. This is our primary style of service. The choir sings, we read the Bible, affirm our faith, pray and share Holy Communion together.</p>
               </div>
             </div>
           </div>
